Closed Bug 959120 Opened 12 years ago Closed 12 years ago

Moz2Dify AutoLockImage constructor

Categories

(Core :: Graphics: Layers, defect)

28 Branch
x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla30

People

(Reporter: ali, Assigned: ali)

References

Details

Attachments

(1 file, 2 obsolete files)

User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/31.0.1650.63 Safari/537.36 Steps to reproduce: Moz2Dify AutoLockImage constructor to take a SourceSurface
Blocks: 947194
Depends on: 958490
Assignee: nobody → ali
Changed the AutoLockImage constructor to take a SourceSurface instead of a gfxASurface
Changed the AutoLockImage constructor to take a SourceSurface instead of a gfxASurface
Attachment #8359691 - Attachment is obsolete: true
Keywords: checkin-needed
Keywords: checkin-needed
Blocks: 960524
Depends on: 958086
No longer blocks: 947194
Changed the AutoLockImage constructor to take a SourceSurface instead of a gfxASurface
Attachment #8360370 - Attachment is obsolete: true
Depends on: 967743
Attachment #8373378 - Flags: review?(nical.bugzilla)
Attachment #8373378 - Flags: review?(nical.bugzilla) → review+
Keywords: checkin-needed
Status: UNCONFIRMED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla30
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: