Bug 959120 - Moz2Dify AutoLockImage contructor. r=nical

Changed the AutoLockImage constructor to take a SourceSurface
instead of a gfxASurface